--- a/css/resset.css
+++ b/css/resset.css
@@ -1,4 +1,14 @@
 
 body {
-    background-color: #3e3e3e;
+    background-color: #2e2e2e;
+    color: white;
+}
+
+#load {
+    display: none;
+}
+
+#videoImg {
+
+    border-radius: 5px;
 }
